fixed minor overflow error in color section with css

--- a/src/components/Colors.css
+++ b/src/components/Colors.css
@@ -10,7 +10,8 @@
   color: black;
   text-align: left;
   padding: 0 6%;
-
+  font-size: 100%;
+  overflow: hidden;
 }
 
 .color-wrapper span:nth-child(2) {
@@ -32,9 +33,10 @@
 .check:after {
   font-family: "Font Awesome 5 Free";
   content: "\2713";
-  display: inline-block;
-  padding-left: 3px;
+  display: inline;
+  padding-left: 2px;
+  margin-left: -1px;
   vertical-align: middle;
   font-weight: 900;
-  overflow:unset;
+  /* overflow: ; */
 }
