--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -6,39 +6,38 @@
   position: absolute;
   top: 0;
   /* display: none; */
-
   z-index: 100;
   overflow: hidden;
-  
+  transition: all 0.2s;
+  /* border: 1px solid grey;  */ 
 }
 /* .show-modal {
   display: block;
 } */
 .image-wrapper {
-  width: 75%;
-  margin-left: 10%;
-  margin-right: 20%;
+  width: 100%;
+  margin-left: -2.5%;
+  margin-right: 30%;
+  margin-top: -50px;
   height: 100%;
 }
 
 img {
-  width: 100%;
+  width: 120%;
 }
 
 .close-btn {
   text-align: right;
   font-size: 2.5rem;
   color: gray;
-  height: 10vh;
+  height: 3vh;
   font-weight: 100;
   position: absolute;
-  top: 20px;
+  top: 5px;
   right: 3%;
   padding: 1%;
   padding-bottom: 1%;
-
   cursor: pointer;
-
   /* border: 1px solid gray; */
 }
 /* .image {
